syntax = "proto3";

package invite;

option csharp_namespace = "Improbable.OnlineServices.Proto.Invite";

message Invite {
    enum Status {
        UNKNOWN = 0;
        PENDING = 1;
        ACCEPTED = 2;
        DECLINED = 3;
    }
    string id = 1;
    string sender_player_id = 2;
    string receiver_player_id = 3;
    string party_id = 4;
    map<string, string> metadata = 5;
    Status current_status = 6;
}

message CreateInviteRequest {
    string receiver_player_id = 1;
    map<string, string> metadata = 2;
}

message CreateInviteResponse {
    string invite_id = 1;
}

message DeleteInviteRequest {
    string invite_id = 1;
}

message DeleteInviteResponse {
}

message UpdateInviteRequest {
    Invite updated_invite = 1;
}

message UpdateInviteResponse {
    Invite invite = 1;
}

message GetInviteRequest {
    string invite_id = 1;
}

message GetInviteResponse {
    Invite invite = 1;
}

message ListAllInvitesRequest {
}

message ListAllInvitesResponse {
    repeated Invite outbound_invites = 1;
    repeated Invite inbound_invites = 2;
}

service InviteService {
    rpc CreateInvite (CreateInviteRequest) returns (CreateInviteResponse);

    rpc DeleteInvite (DeleteInviteRequest) returns (DeleteInviteResponse);

    // Updates the metadata and current status. Sender, receiver and party id are ignored.
    rpc UpdateInvite (UpdateInviteRequest) returns (UpdateInviteResponse);

    rpc GetInvite (GetInviteRequest) returns (GetInviteResponse);

    rpc ListAllInvites (ListAllInvitesRequest) returns (ListAllInvitesResponse);
}
